--- a/.gitignore
+++ b/.gitignore
@@ -121,14 +121,12 @@ celerybeat.pid
 
 # Environments
 .env
-.venv
 env/
-venv/
 ENV/
 env.bak/
 venv.bak/
 venv/
-..venv
+.venv/
 
 # Spyder project settings
 .spyderproject
